# ego_single_goal_uav

./: .gitignore  PARAM_TUNING.md  README.md  build.sh  install_deps_ubuntu20_noetic.sh  run_single_goal.sh
docs/: competition_mission_manager_design.md  competition_startup_flow.md
src/CERLAB-UAV-Autonomy/autonomous_flight/: CMakeLists.txt  package.xml
src/CERLAB-UAV-Autonomy/autonomous_flight/cfg/dynamic_navigation/: dynamic_detector_lidar_param.yaml  flight_base_lidar.yaml  mapping_lidar_param.yaml
src/CERLAB-UAV-Autonomy/autonomous_flight/launch/: dynamic_navigation_fake2d.launch  dynamic_navigation_lidar.launch  px4_takeoff_tracking.launch  takeoff_and_hover_px4.launch
src/CERLAB-UAV-Autonomy/autonomous_flight/rviz/: dynamic_navigation_fake2d.rviz
src/CERLAB-UAV-Autonomy/autonomous_flight/scripts/: publish_click_goal_range_marker.py  publish_detector_range_marker.py  publish_nav_goal.py
src/CERLAB-UAV-Autonomy/autonomous_flight/test/: test_dynamic_navigation_fake2d_launch.py  test_dynamic_navigation_lidar_launch.py  test_dynamic_navigation_start_end_conditions.cpp  test_flight_base_kinematics.cpp  test_px4_takeoff_tracking_launch.py  test_takeoff_and_hover_px4_launch.py
src/CERLAB-UAV-Autonomy/onboard_detector/: CMakeLists.txt  package.xml
src/CERLAB-UAV-Autonomy/onboard_detector/cfg/: detector_param.yaml  lidar_detector_param.yaml  lidar_k_detector_param.yaml
src/CERLAB-UAV-Autonomy/onboard_detector/launch/: run_lidar_detector.launch  run_lidar_k.launch  run_noyolo_detector.launch
src/CERLAB-UAV-Autonomy/onboard_detector/rviz/: lidar_detector_sim.rviz  lidar_k_detector.rviz
src/CERLAB-UAV-Autonomy/onboard_detector/test/: test_dynamic_detector_lidar_classification.cpp  test_launch_configs.py  test_lidar_cluster_filter.cpp
src/CERLAB-UAV-Autonomy/tracking_controller/: CMakeLists.txt
src/CERLAB-UAV-Autonomy/tracking_controller/cfg/: controller_param.yaml
src/CERLAB-UAV-Autonomy/tracking_controller/test/: test_tracking_controller_raw_setpoint.cpp
src/CERLAB-UAV-Autonomy/uav_simulator/: CMakeLists.txt  package.xml
src/CERLAB-UAV-Autonomy/uav_simulator/launch/: dynamic_avoidance_px4_scenario.launch  dynamic_avoidance_px4_static_scenario.launch  dynamic_avoidance_scenario.launch  dynamic_avoidance_static_scenario.launch  large_pillar_start.launch  large_pillar_target_uav.launch  setupTF.launch  start.launch  tracking_scenario.launch
src/CERLAB-UAV-Autonomy/uav_simulator/msg/: DynamicObstacleArray.msg  DynamicObstacleState.msg  PlannerEvalDiagnostics.msg
src/CERLAB-UAV-Autonomy/uav_simulator/scripts/: scenario_manager.py  start_px4_sitl.py  target_uav_controller.py  tracking_evaluator.py  tracking_trajectory.py
src/CERLAB-UAV-Autonomy/uav_simulator/src/: dynamic_pillar_state_aggregator.cpp  dynamic_pillar_state_node.cpp  smoothPillarPathPlugin.cc
src/CERLAB-UAV-Autonomy/uav_simulator/test/: test_dynamic_avoidance_px4_scenario_launch.py  test_dynamic_avoidance_px4_static_scenario_launch.py  test_dynamic_avoidance_scenario_launch.py  test_dynamic_avoidance_static_scenario_launch.py  test_dynamic_pillar_state_aggregator.cpp  test_scenario_manager.py  test_target_uav_controller.py  test_target_uav_launch_split.py  test_tracking_evaluator.py  test_tracking_scenario_static.py  test_tracking_trajectory.py
src/CERLAB-UAV-Autonomy/uav_simulator/urdf/: px4_iris_lidar360.sdf  px4_iris_mid360.sdf  quadcopter.urdf
src/ego_single_goal/: CMakeLists.txt  package.xml
src/ego_single_goal/config/: competition_mission.yaml
src/ego_single_goal/launch/: competition_mission_manager.launch  ego_single_goal_px4.launch  ego_single_goal_px4_interactive.launch
src/ego_single_goal/rviz/: task_a.rviz
src/ego_single_goal/scripts/: livox_cloud_to_ego_world.py
src/ego_single_goal/src/: competition_mission_manager.cpp  task_a_gap_detector.py  task_a_waypoint_manager.py
(+39 files in other folders)
